src/objects/LeadIndex__c.object
<CustomObject>
    <description>Index record of Booking record day by day</description>
    <fields>
        <fullName>APPNAME__c</fullName>
        <description>該当データを作成の中継アプリ名情報を格納する</description>
        <label>APPNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品明細</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>LeadIndexAccountMasterRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoCreateFlgCbl__c</fullName>
        <defaultValue>true</defaultValue>
        <description>予約データの作成に従って、自動作成フラグFALSEに設定すると、トリガーの予約自動作成機能をスキップする</description>
        <label>自動作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingApiMailBody__c</fullName>
        <label>ブッキングAPIメール本文</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BookingApiSendMailFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <label>ブッキングAPIメール送信フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingApiTelegramData__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <label>リザプリ電文</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BookingFlexAppLayoutNo__c</fullName>
        <label>一画面のレイアウトNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>予約チャネル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>特記事項</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContactAddressCal__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <formula>contactRef__r.MailingCountry + &apos; &apos; + contactRef__r.MailingState +  &apos; &apos; + contactRef__r.MailingCity +  &apos; &apos; + contactRef__r.MailingStreet</formula>
        <label>お客様住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmailCal__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <formula>contactRef__r.Email</formula>
        <label>お客様Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactKatakanaCal__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <formula>contactRef__r.Katakana__c</formula>
        <label>お客様ひらがな</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactKatakana__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <formula>contactRef__r.Katakana__c</formula>
        <label>お客様ひらがな</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNameCal__c</fullName>
        <formula>contactRef__r.LastName + &apos; &apos; + contactRef__r.FirstName</formula>
        <label>顧客名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhoneCal__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <formula>contactRef__r.Phone</formula>
        <label>お客様Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPostalCodeCal__c</fullName>
        <description>ブッキングAPIから予約取込の自動返信用</description>
        <formula>contactRef__r.MailingPostalCode</formula>
        <label>お客様郵便番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataClassification__c</fullName>
        <label>データ種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureDate__c</fullName>
        <label>出発日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartureTime__c</fullName>
        <defaultValue>&apos;10:00&apos;</defaultValue>
        <label>出発時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBody__c</fullName>
        <description>XMLにカスマイズタグにより、自動作成した通知明細情報を該当項目に格納する（泊目別）</description>
        <label>予約通知料金明細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EntryDate__c</fullName>
        <label>到着日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryTime__c</fullName>
        <defaultValue>&apos;15:00&apos;</defaultValue>
        <description>HH:MM</description>
        <label>到着時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <defaultValue>&quot;FromUI&quot;</defaultValue>
        <label>発生源</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraBedChk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>エキストラベッド(E/B)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>外部システム連携用キー</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadName__c</fullName>
        <label>予約名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadNo__c</fullName>
        <externalId>true</externalId>
        <label>予約番号</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberAddPoint__c</fullName>
        <label>+付与ポイント</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUsePoint__c</fullName>
        <label>+使用ポイント</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserAddr__c</fullName>
        <label>+会員住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserCorp__c</fullName>
        <label>+会員会社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserDateOfBirth__c</fullName>
        <label>+会員生年月日</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserDep__c</fullName>
        <label>+会員所属部署</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserEmergencyPhoneNumber__c</fullName>
        <label>+会員緊急連絡先番号(携帯等)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserGendar__c</fullName>
        <label>+会員性別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserID__c</fullName>
        <label>+会員番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserKana__c</fullName>
        <label>+会員氏名カナ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserMailAddr__c</fullName>
        <label>+会員Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserName__c</fullName>
        <label>+会員氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserTel__c</fullName>
        <label>+会員電話番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserType__c</fullName>
        <label>+会員種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserZip__c</fullName>
        <label>+会員郵便番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nights__c</fullName>
        <label>宿泊数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <description>既存ID項目の更新する前の情報を格納する</description>
        <label>旧ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>親部屋明細フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentLeadIndxRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親予約インデックス</label>
        <referenceTo>LeadIndex__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>ParentLeadIndxRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>支払方法</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDetailSyncInfo__c</fullName>
        <description>該当予約のプラン項目を設定される場合、プラン明細情報設定情報がカスタムマイズの場合、カスタムマイズ情報は該当項目に格納する
Format: プラン明細ID,単価:プラン明細ID,単価</description>
        <label>プラン明細個別設定情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プラン</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>非公開に設定されたプランを選択できません。</errorMessage>
            <filterItems>
                <field>Plan__c.IsClosed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>IndexSubPlanRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PmsEmailDelDateTime__c</fullName>
        <label>予約キャンセルメール通知日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PmsEmailInsUpdDateTime__c</fullName>
        <label>予約新規・変更メール通知日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RoomTypeRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>IndexSubRoomTypeRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rooms__c</fullName>
        <label>部屋数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <label>売価</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>セグメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusLst__c</fullName>
        <label>状態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>キャンセル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StayPersons__c</fullName>
        <label>部屋人数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockLogicProcessFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ver16.50以後仕様、該当フラグは在庫調整ロジック対象データするがどうか判断用、TRUEすると、処理対象</inlineHelpText>
        <label>在庫調整ロジック対象(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAccommodationCharge__c</fullName>
        <label>+請求金額</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TravelAgencyBookingDelDateTime__c</fullName>
        <label>+キャンセル日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TravelAgencyBookingInsDateTime__c</fullName>
        <label>+予約日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TravelAgencyBookingUpdDateTime__c</fullName>
        <label>+変更日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TravelLeadNo__c</fullName>
        <externalId>true</externalId>
        <label>+旅行会社予約番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>IndexContactRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>予約インデックス</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>I_{YYYY}_{0000000000}</displayFormat>
        <label>予約名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>